force-app/main/default/objects/Racer__c/Racer__c.object-meta.xml
<CustomObject>
    <description>Racer members</description>
    <label>Racer</label>
    <nameField>
        <label>Racer Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>