force-app/main/default/objects/Racer__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Set  Contract Start Date</description>
    <inlineHelpText>Set  Contract Start Date</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>