force-app/main/default/objects/Racer__c/fields/Number_of_attended_championships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_attended_championships__c</fullName>
    <label>Number of attended championships</label>
    <summaryForeignKey>Racer_Position__c.Racer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>