force-app/main/default/objects/Racer__c/fields/Racer_Details__c.field-meta.xml
<CustomField>
    <fullName>Racer_Details__c</fullName>
    <label>Racer Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>