force-app/main/default/objects/Racer__c/fields/Racer_Manager__c.field-meta.xml
<CustomField>
    <fullName>Racer_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Racer Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Racers</relationshipLabel>
    <relationshipName>Racers</relationshipName>
    <type>Lookup</type>
</CustomField>