force-app/main/default/objects/Racer__c/fields/Racer_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Racer_Qualification_Status__c</fullName>
    <inlineHelpText>Choose racer status</inlineHelpText>
    <label>Racer Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>F1 Racer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>