force-app/main/default/objects/Racer__c/fields/Racer_Status__c.field-meta.xml
<CustomField>
    <fullName>Racer_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Racer Status</label>
    <type>Checkbox</type>
</CustomField>