force-app/main/default/objects/Racer__c/fields/Win_bonus_amount__c.field-meta.xml
<CustomField>
    <fullName>Win_bonus_amount__c</fullName>
    <description>Reward depending on class and place</description>
    <formula>CASE(Racer_Qualification_Status__c, &apos;Trainee&apos;, &apos;1place 500$, 2 place 200$, 3place 50$&apos;, &apos;Associate&apos;, &apos;1place 1500$, 2 place 700$, 3place 300$&apos;, &apos;F1 Racer&apos;, &apos;1place 5000$, 2 place 3000$, 3place 1000$&apos;,&apos;Not defined&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reward depending on class and place</inlineHelpText>
    <label>Win bonus amount</label>
    <type>Text</type>
</CustomField>