force-app/main/default/objects/Racer__c/fields/Years_in_Racing__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Racing__c</fullName>
    <label>Years in Racing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>