force-app/main/default/objects/Racer__c/recordTypes/Porches_Team_Racer.recordType-meta.xml
<RecordType>
    <fullName>Porches_Team_Racer</fullName>
    <active>true</active>
    <label>Porches Team Racer</label>
</RecordType>