force-app/main/default/objects/Racer__c/validationRules/Contract_startdate_must_be_less_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_startdate_must_be_less_end_date</fullName>
    <active>true</active>
    <description>Contract startdate must be less end date</description>
    <errorConditionFormula>Contact_End_Date__c  &lt;  Contract_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Contact_End_Date__c</errorDisplayField>
    <errorMessage>Check Contract Start Date and Contract End Date</errorMessage>
</ValidationRule>